fix css responsive on mobile on the home page

--- a/paark_frontend/src/components/Navigation/Navigation/Navigation.scss
+++ b/paark_frontend/src/components/Navigation/Navigation/Navigation.scss
@@ -1,3 +1,6 @@
 .navigation {
   margin-bottom: 100px;
+  @media only screen and (max-width: 750px) {
+    margin-bottom: 50px;
+  }
 }
